# Web_basics

./: .gitignore  README.md  index.html  main.py  pyproject.toml
